--- a/ai-agents.html
+++ b/ai-agents.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Silent Equity — AI Agents</title>
-  <meta name="description" content="Custom AI agents designed to handle conversations, qualify leads, and support operations — billed monthly.">
+  <meta name="description" content="AI agents configured for real operations: lead qualification, routing, booking, and internal support — monitored and optimized monthly.">
   <link rel="icon" href="assets/logo.png">
   <link rel="stylesheet" href="site.css">
 </head>
@@ -13,7 +13,7 @@
 <header class="nav">
   <div class="wrap row">
     <a href="index.html" class="brand">
-      <div class="logo-mark">
+      <div class="logo-mark" aria-hidden="true">
         <span class="logo-bar"></span>
         <span class="logo-bar"></span>
         <span class="logo-bar"></span>
@@ -21,7 +21,7 @@
       <span class="logo-wordmark">SilentEquity</span>
     </a>
 
-    <nav class="desktop-nav">
+    <nav class="desktop-nav" aria-label="Primary navigation">
       <a href="#agents">Agents</a>
       <a href="#pricing">Pricing</a>
       <a href="#process">How It Works</a>
@@ -43,30 +43,34 @@
 <section class="hero">
   <div class="wrap grid">
     <div>
-      <div class="badge">AI Agents • Monthly Service</div>
-      <h1>AI Agents Built for <span class="glow">Real Businesses</span></h1>
+      <div class="badge">AI Agents • Monitoring • Optimization</div>
+      <h1>AI Agents Configured for <span class="glow">Real Operations</span></h1>
 
       <p class="lead">
-        Silent Equity designs AI agents that manage conversations, qualify leads,
-        and support operations — without replacing your tools or adding complexity.
+        Not a plug-in chatbot. Silent Equity builds agents with tone, rules, qualification logic, and routing —
+        so inquiries become booked calls and workflows keep moving without manual chasing.
       </p>
 
       <div class="buttons">
         <a class="btn primary" href="#pricing">View Pricing</a>
         <a class="btn ghost" href="#contact">Request Setup</a>
       </div>
+
+      <p class="fineprint" style="margin-top:10px;">
+        Best for: businesses that get leads regularly and want faster response + cleaner routing.
+      </p>
     </div>
 
     <div class="panel">
-      <h3>What This Replaces</h3>
+      <h3>What This Removes</h3>
       <ul class="bullets">
         <li>Missed messages and delayed replies</li>
         <li>Unqualified leads wasting your time</li>
         <li>Repeated questions from clients or staff</li>
-        <li>Manual routing and follow-ups</li>
+        <li>Manual routing, follow-ups, and “where do I send them?”</li>
       </ul>
       <p class="muted" style="margin-top:10px;">
-        The goal: faster response, cleaner routing, and more booked calls — automatically.
+        Outcome: faster response, cleaner lead handling, fewer missed opportunities — automatically.
       </p>
     </div>
   </div>
@@ -76,18 +80,18 @@
 <section id="agents" class="packages">
   <div class="wrap">
     <h2 class="center">Available AI Agents</h2>
-    <p class="muted center">Choose one agent or combine multiple for a full automation layer.</p>
+    <p class="muted center">Choose one agent or combine multiple for a full support layer.</p>
 
     <div class="cards">
 
       <div class="card">
         <h3>AI Receptionist</h3>
         <p class="muted">
-          Handles incoming inquiries, qualifies leads, and routes conversations automatically.
+          Handles inquiries, qualification, and routing so leads get processed instantly — even after hours.
         </p>
         <ul class="ticks">
-          <li>24/7 responses across your website or inbox</li>
-          <li>Lead intake & qualification questions</li>
+          <li>24/7 responses on your website or inbox</li>
+          <li>Qualification questions (fit, budget, urgency)</li>
           <li>Routes to the right offer, link, or next step</li>
         </ul>
       </div>
@@ -95,24 +99,24 @@
       <div class="card featured">
         <h3>Website AI Assistant</h3>
         <p class="muted">
-          Converts traffic into leads by guiding visitors to the right solution.
+          Converts traffic into leads by guiding visitors to the right solution and capturing details cleanly.
         </p>
         <ul class="ticks">
-          <li>Answers FAQs using your services & policies</li>
-          <li>Recommends the best option based on needs</li>
-          <li>Captures contact info and sends it to you instantly</li>
+          <li>Answers FAQs using your offers + policies</li>
+          <li>Recommends the right option based on needs</li>
+          <li>Captures contact info and notifies you instantly</li>
         </ul>
       </div>
 
       <div class="card">
         <h3>Internal AI Assistant</h3>
         <p class="muted">
-          Helps your team move faster by answering SOP and workflow questions instantly.
+          A team help desk trained on SOPs — reduces repeat questions and speeds up execution.
         </p>
         <ul class="ticks">
           <li>Trained on your processes, links, and rules</li>
           <li>Faster onboarding for contractors/staff</li>
-          <li>Reduces repeat questions and bottlenecks</li>
+          <li>Reduces bottlenecks and handoffs</li>
         </ul>
       </div>
 
@@ -123,15 +127,15 @@
 <!-- PRICING -->
 <section id="pricing" class="packages">
   <div class="wrap">
-    <h2 class="center">Monthly Pricing</h2>
-    <p class="muted center">Affordable entry. Clear upgrades. Cancel anytime.</p>
+    <h2 class="center">Monthly Continuity</h2>
+    <p class="muted center">Monitoring + optimization so your agent stays accurate as your offers evolve.</p>
 
     <div class="cards">
 
       <div class="card">
-        <h3>Foundation Agent</h3>
+        <h3>System Monitoring</h3>
         <div class="price">$149/mo</div>
-        <p class="muted">One AI agent configured for your business.</p>
+        <p class="muted">One agent configured + monitored to run consistently.</p>
         <ul class="ticks">
           <li>1 agent (Receptionist OR Website Assistant)</li>
           <li>Lead capture + routing rules</li>
@@ -141,9 +145,9 @@
       </div>
 
       <div class="card featured">
-        <h3>Momentum Agent</h3>
+        <h3>System Optimization</h3>
         <div class="price">$249/mo</div>
-        <p class="muted">Two agents working together for higher conversion.</p>
+        <p class="muted">Two agents + monthly tuning for higher conversion.</p>
         <ul class="ticks">
           <li>2 agents (Receptionist + Website Assistant)</li>
           <li>Smarter qualification & routing</li>
@@ -153,9 +157,9 @@
       </div>
 
       <div class="card">
-        <h3>Operations Suite</h3>
+        <h3>Autonomous Ops Layer</h3>
         <div class="price">$399/mo</div>
-        <p class="muted">A full AI support layer across your business.</p>
+        <p class="muted">A full AI support layer across external + internal operations.</p>
         <ul class="ticks">
           <li>All agents (Receptionist + Website + Internal)</li>
           <li>External + internal workflows</li>
@@ -167,7 +171,7 @@
     </div>
 
     <p class="fineprint center" style="margin-top:10px;">
-      After checkout, you’ll receive a confirmation email and a simple onboarding form to launch your agent.
+      After checkout, you’ll receive a confirmation email + quick onboarding form. Typical launch: fast once info is provided.
     </p>
   </div>
 </section>
@@ -179,32 +183,35 @@
     <div>
       <h2>How It Works</h2>
       <p class="muted">
-        This is not a “plug-and-pray” chatbot. We set your agent up like a real business operator — with rules,
-        tone, and routing that match how you actually sell and deliver.
+        We configure your agent like a real operator — with rules, tone, and routing that match how you sell and deliver.
       </p>
 
       <ul class="ticks">
-        <li><strong>1) Onboarding (10 minutes):</strong> You answer a short form about your offers, FAQs, and preferred next steps.</li>
-        <li><strong>2) Agent Build:</strong> We configure the agent’s tone, questions, qualification logic, and routing rules.</li>
-        <li><strong>3) Deployment:</strong> We deploy it to your website or inbox and connect lead capture to your email/CRM.</li>
-        <li><strong>4) Optimization:</strong> Every month we refine messaging, improve routing, and adjust flows based on what’s working.</li>
+        <li><strong>1) Onboarding:</strong> You answer a short form about offers, FAQs, and preferred next steps.</li>
+        <li><strong>2) Configuration:</strong> We set tone, questions, qualification logic, and routing rules.</li>
+        <li><strong>3) Deployment:</strong> We deploy to your website/inbox and connect lead capture to email/CRM.</li>
+        <li><strong>4) Optimization:</strong> Monthly refinements to keep it accurate as your business changes.</li>
       </ul>
 
       <p class="muted" style="margin-top:10px;">
         Result: faster response times, cleaner lead handling, and fewer missed opportunities — without you living on your phone.
+      </p>
+
+      <p class="fineprint" style="margin-top:12px;">
+        Not a fit if you want a “free chatbot” with no rules, no routing, and no performance upkeep.
       </p>
     </div>
 
     <div class="panel soft">
       <h3>What You Get (Every Month)</h3>
       <ul class="bullets">
-        <li>Agent monitoring + ongoing uptime support</li>
+        <li>Agent monitoring + uptime support</li>
         <li>Monthly improvements based on performance</li>
-        <li>Routing rules updated as your offers change</li>
+        <li>Routing updated as your offers change</li>
         <li>Direct support through email/text</li>
       </ul>
       <p class="muted" style="margin-top:10px;">
-        You stay in control. We keep it clean, functional, and scalable.
+        You stay in control. We keep it clean, reliable, and scalable.
       </p>
     </div>
 
@@ -215,10 +222,10 @@
 <section id="contact" class="contact">
   <div class="wrap grid">
     <div>
-      <h2>Need Help Choosing a Plan?</h2>
+      <h2>Request Setup</h2>
       <p class="muted">
-        If you’re unsure which plan fits, send a message with what you sell and how leads contact you.
-        We’ll tell you the best fit.
+        Send what you sell + where leads contact you (website, IG, email, SMS).
+        We’ll tell you the best-fit agent setup.
       </p>
 
       <div class="row gap">
@@ -233,7 +240,7 @@
         <label>Name<input name="Name" required></label>
         <label>Email<input name="Email" type="email" required></label>
         <label>Message<textarea name="Message" rows="4" required></textarea></label>
-        <button class="btn primary block">Send Message</button>
+        <button class="btn primary block" type="submit">Send Message</button>
       </form>
     </div>
   </div>
@@ -246,8 +253,8 @@
 </footer>
 
 <script>
-function toggleMenu(){document.getElementById('mobileNav').classList.toggle('open')}
-document.getElementById('y').textContent=new Date().getFullYear()
+  function toggleMenu(){document.getElementById('mobileNav').classList.toggle('open')}
+  document.getElementById('y').textContent=new Date().getFullYear()
 </script>
 
 </body>
